classDiagram

%% Core Entities
    Piece <|-- Player
    Piece <|-- Hero
    Piece <|-- Monster

    Hero <|-- Warrior
    Hero <|-- Paladin
    Hero <|-- Sorcerer

    Monster <|-- Dragon
    Monster <|-- Spirit
    Monster <|-- Exoskeleton

    Item <|-- Weapon
    Item <|-- Armor
    Item <|-- Potion
    Item <|-- Spell

%% Interfaces
    Equipable <|.. Item
    DamageDealing <|.. Spell
    DamageDealing <|.. Weapon
    LoadableFromText <|.. TextDataLoader

%% Game Logic
    Game <|-- HMGame
    Board <|-- HMBoard
    Square <|-- HMSquare
    Effect <|-- HMEffect
    MonsterAttackStrategy <|-- MostHealthTarget

%% Dependencies
    Hero --> Inventory
    Hero --> HeroStats
    Hero --> Weapon
    Hero --> Armor
    Hero --> Spell

    Monster --> MonsterStats
    Monster --> MonsterAttackStrategy

    Player --> Inventory
    Player --> Effect

    Battle --> Hero
    Battle --> Monster
    Battle --> Spell
    Battle --> Weapon
    Battle --> Inventory
    Battle --> BattleCommand

    UserInputs --> Player
    UserInputs --> Hero
    UserInputs --> Monster
    UserInputs --> Inventory
    UserInputs --> Spell

    GeneralPrints --> Hero
    GeneralPrints --> Monster
    GeneralPrints --> Player

    Inventory --> Item

    TextDataLoader --> Item
    TextDataLoader --> Hero
    TextDataLoader --> Monster
    TextDataLoader --> Spell
    TextDataLoader --> Potion

    Tile --> Piece
    Tile --> Effect
